# tree-sitter-klang

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-klang.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_klang/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterKlang/: klang.h
bindings/swift/TreeSitterKlangTests/: TreeSitterKlangTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: test_expressions.txt  test_misc.txt  test_statements.txt
