[package]
name = "tree-sitter-klang"
description = "Klang grammar for tree-sitter"
version = "0.1.0"
authors = ["Ji, Kaiwen <kevin0x00@163.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "klang"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/kevin0x0/tree-sitter-klang"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.4"
